c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/pointer_conversions/compare_void_to_other_pointer.c
int main(void) {
  int arr[3] = {1, 2, 3};
  void *ptr = (void *)arr;
  // you can't compare pointers to different types, e..g. void * to int *
  return ptr < arr + 1;
}